# quantitative-portfolio-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: portfolio_weights.json
data/raw/: info.txt
figures/: metrics.tex
notebooks/: data_cleaning.ipynb  exploratory_data_analysis.ipynb  get_portfolio_weights.ipynb  portfolio_analysis.ipynb
src/: compute_mom_and_ma  data_loader.py  portfolio_weights.py
